<resources>
    <string name="app_name">Rapientrega</string>
    <string name="username">Usuario</string>
    <string name="signin">Iniciar sesión</string>
    <string name="password">Contraseña</string>
    <string name="forgot_password">Restaurar contraseña</string>
    <string name="login">Inicio de sesión</string>
    <string name="register">Crear cuenta</string>
    <string name="email">Correo electrónico</string>
    <string name="repeat_password">Repetir contraseña</string>
    <string name="create_account">Crear cuenta</string>
    <string name="back">Atras</string>
    <string name="send">Enviar</string>
    <string name="restore">Restaurar contraseña</string>
    <string name="restoreButtonText">Restaurar</string>
    <string name="descriptionRestore">Para restablecer tu contraseña, escribe tu correo electrónico y te enviaremos un email con el que podras recuperar tu cuenta.</string>
    <string name="not_empty">Este campo no puede estar vacio.</string>
    <string name="logo_app">App icon</string>
    <string name="home">Inicio</string>
    <string name="profile">Perfil</string>
    <string name="orders">Pedidos</string>
    <string name="products">Productos</string>
    <string name="fragment_products">Fragment productos</string>
    <string name="string_orders">Vista pedidos</string>
    <string name="fragment_profile">Fragment perfil</string>
    <string name="string_products">products</string>
    <string name="title_activity_products">Productos</string>
    <string name="string_account">Account</string>
    <string name="title_activity_account">Mi cuenta</string>
    <string name="title_activity_orders">Mis pedidos</string>
    <string name="search_item">Buscar producto</string>
    <string name="address">Dirección</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Nombre</string>
    <string name="price">Precio</string>
    <string name="type">Tipo</string>
    <string name="category">Category</string>
    <string name="open">Abierto</string>
    <string name="closed">Cerrado</string>
    <string name="time_services">Horario de atención</string>
    <string name="shipping_cost">Costo de envio</string>
    <string name="description">Description</string>
    <string name="date">Fecha</string>
    <string name="total">Total</string>
    <string name="pay">Comprar</string>
    <string name="shoping_cart">Carrito de compras</string>

    <string name="mapbox_access_token">
        pk.eyJ1IjoiZmVsaXBldmVsYXNxdWV6MTgwMiIsImEiOiJjazVoNnp3NGwwMDI5M2tuenA3djduYml1In0.Uo5BTwBjBLbdQGTHwmzyZA
    </string>
    <string name="price_double">$0.0</string>
    <string name="not_email">Email is invalid</string>
    <string name="error_login">Username or password incorrect</string>
    <string name="error">Error</string>
    <string name="list_empty">Esta lista esta vacia</string>
    <string name="logout_description">Cerrar sesión</string>
    <string name="add_shopping_cart">Añadir al carrito</string>
    <string name="identificationCard">Número de identificación</string>
    <string name="cellphone">Teléfono</string>
    <string name="you_sure_exit">¿Estas seguro que quieres salir?</string>
    <string name="yes">Sí</string>
    <string name="no">No</string>
    <string name="error_register">Error al registrar el usuario</string>
    <string name="success_register_user">Se registró correctamente el usuario</string>
    <string name="edit_password">Editar contraseña</string>
    <string name="logout">Cerrar sesión</string>
    <string name="edit_profile">Editar perfil</string>
    <string name="about">Acerca de</string>
    <string name="image">Image</string>
    <string name="you_sure_delete">¿Esta seguro de borrar este producto?</string>
    <string name="qualification">4.5</string>
    <string name="working_days">Working days</string>
    <string name="you_sure_add_product">¿Estas seguro de agregar este producto al carrito?</string>
    <string name="map">Mapa</string>
    <string name="city">Ciudad</string>
    <string name="search_location">Buscar mi ubicación</string>
    <string name="lat_lng">Latitud y Longitud</string>
    <string name="next">Siguiente paso</string>
    <string name="you_sure_pay">¿Estas seguro de generar la compra?</string>
    <string name="loading">Cargando...</string>
    <string name="please_wait">Por favor espera.</string>
    <string name="less">-</string>
    <string name="more">+</string>
    <string name="value_initial">1</string>
    <string name="order_number">Pedido #1</string>
    <string name="product_count">Cantidad de productos:</string>
    <string name="count">Cant.</string>
    <string name="personal_date">Datos personales</string>
    <string name="first_name">Nombre</string>
    <string name="last_name">Apellidos</string>
    <string name="unassigned">Sin asignar</string>
    <string name="in_progress">En curso</string>
    <string name="canceled">Cancelada</string>
    <string name="canceled_by_user">Cancelado por el usuario</string>
    <string name="canceled_by_not_deliveryman">Cancelada porque no se encontró un repartidor disponible</string>
    <string name="completed">Finalizado</string>
    <string name="active_the_location">¿Quiere activar la ubicación de su celular?</string>
    <string name="select_city">Seleccione su ciudad actual</string>
    <string name="not_permissions">Debes aceptar los permisos y la ubicación</string>
    <string-array name="cities">
        <item>Villavicencio</item>
    </string-array>
    <string-array name="types_cash_value">
        <item>Efectivo</item>
    </string-array>
    <string-array name="types_cash_key">
        <item>cash</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
</resources>
