<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:weightSum="10">

    <TextView
        style="@style/TextViewTheme.H4"
        android:layout_weight="3"
        android:gravity="center"
        android:text="@string/products"
        android:textColor="@android:color/black" />

    <TextView
        style="@style/TextViewTheme.H4"
        android:layout_weight="4"
        android:gravity="center"
        android:text="@string/count"
        android:textColor="@android:color/black" />

    <TextView
        style="@style/TextViewTheme.H4"
        android:layout_weight="3"
        android:gravity="center"
        android:text="@string/total"
        android:textColor="@android:color/black" />

</LinearLayout>