<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <Button
        android:id="@+id/btLeft"
        style="@style/ButtonTheme.Less"
        android:enabled="false"
        android:onClick="onClick"
        android:text="@string/less"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/tvCount"
        style="@style/TextViewTheme.H1"
        android:layout_width="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/value_initial"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary" />

    <Button
        android:id="@+id/btMore"
        style="@style/ButtonTheme.More"
        android:onClick="onClick"
        android:text="@string/more"
        android:textColor="@android:color/white" />

</LinearLayout>