<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".views.RestorePasswordActivity">

    <TextView
        android:labelFor="@id/tilEmailRestore"
        android:id="@+id/tvRestoreDescription"
        style="@style/TextViewTheme.paragraph"
        android:text="@string/descriptionRestore" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_below="@id/tvRestoreDescription"
        android:id="@+id/tilEmailRestore"
        style="@style/TextInputLayoutTheme">

        <com.google.android.material.textfield.TextInputEditText
            android:drawableLeft="@drawable/ic_email_white"
            style="@style/EditTextTheme"
            android:hint="@string/email" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btRestore"
        style="@style/ButtonTheme"
        android:onClick="onClick"
        android:layout_alignParentBottom="true"
        android:text="@string/restoreButtonText" />

</RelativeLayout>