<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:fillViewport="true"
    tools:context=".views.activities.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_logo_white" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilUserLogin"
                style="@style/TextInputLayoutTheme">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/EditTextTheme"
                    android:drawableLeft="@drawable/ic_person_white"
                    android:hint="@string/username"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPasswordLogin"
                style="@style/TextInputLayoutTheme">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/EditTextTheme"
                    android:drawableLeft="@drawable/ic_lock_white"
                    android:hint="@string/password"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:orientation="vertical">

            <Button
                android:id="@+id/btSignIn"
                style="@style/ButtonTheme"
                android:onClick="onClick"
                android:text="@string/signin" />

            <TextView
                android:id="@+id/tvForgotPassword"
                style="@style/TextViewTheme"
                android:layout_above="@id/tvRegister"
                android:onClick="onClick"
                android:paddingVertical="10dp"
                android:text="@string/forgot_password"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/tvRegister"
                style="@style/TextViewTheme"
                android:layout_alignParentBottom="true"
                android:onClick="onClick"
                android:paddingVertical="10dp"
                android:text="@string/register"
                android:textAlignment="center" />

        </LinearLayout>


    </LinearLayout>


</ScrollView>