<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.views.activities.ShoppingCartActivity">

    <include
        android:id="@+id/include"
        layout="@layout/component_action_bar_single" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/ll"
        android:layout_below="@id/include" />

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/btPay">

        <TextView
            style="@style/TextViewTheme.Title"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/total"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/tvTotal"
            style="@style/TextViewTheme.Title"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/price_double"
            android:textColor="@android:color/black" />

    </LinearLayout>

    <Button
        android:id="@+id/btPay"
        style="@style/ButtonTheme.Stroke"
        android:layout_alignParentBottom="true"
        android:onClick="onClick"
        android:text="@string/next" />

</RelativeLayout>