<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:weightSum="10">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ivPhoto"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/th_icon"
            android:src="@drawable/ic_user"
            app:civ_border_color="#FFFFFFFF"
            app:civ_border_width="2dp" />

        <TextView
            android:id="@+id/tvName"
            style="@style/TextViewTheme.H4"
            android:layout_toEndOf="@id/ivPhoto"
            android:layout_toRightOf="@id/ivPhoto"
            android:gravity="center"
            android:text="@string/name"
            android:textColor="@android:color/black" />

    </RelativeLayout>

    <TextView
        android:id="@+id/tvCount"
        style="@style/TextViewTheme.H3"
        android:layout_weight="4"
        android:gravity="center"
        android:text="@string/value_initial"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/tvTotal"
        style="@style/TextViewTheme.H3"
        android:layout_weight="3"
        android:gravity="center"
        android:text="@string/total"
        android:textColor="@android:color/black" />

</LinearLayout>