<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:background="@drawable/th_panel"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/ivPhoto"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/image"
        android:scaleType="centerCrop" />

    <RelativeLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/colorTransparent" />

    <TextView
        android:id="@+id/tvName"
        style="@style/TextViewTheme.H1"
        android:layout_margin="0dp"
        android:text="@string/title_activity_orders"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@id/tvTotal"
        style="@style/TextViewTheme.H3"
        android:layout_width="wrap_content"
        android:layout_alignEnd="@id/layout"
        android:layout_alignRight="@id/layout"
        android:layout_alignBottom="@id/layout"
        android:text="@string/total" />

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/layout"
        android:orientation="vertical"
        android:visibility="gone">

        <include layout="@layout/header_product_order" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <include layout="@layout/footer_product_order" />
    </LinearLayout>

</RelativeLayout>