<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:orientation="vertical">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ivPhoto"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerVertical="true"
        android:background="@drawable/th_icon"
        android:src="@drawable/ic_user"
        app:civ_border_color="@color/colorPrimaryDark"
        app:civ_border_width="1dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/ivPhoto"
        android:layout_toRightOf="@id/ivPhoto">

        <TextView
            android:id="@+id/tvName"
            style="@style/TextViewTheme.Title"
            android:layout_marginBottom="0dp"
            android:padding="5dp"
            android:text="@string/name"
            android:textColor="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/tvDescription"
            style="@style/TextViewTheme"
            android:layout_below="@id/tvName"
            android:layout_marginBottom="0dp"
            android:layout_toStartOf="@id/tvQualification"
            android:layout_toLeftOf="@id/tvQualification"
            android:padding="5dp"
            android:text="@string/category"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/tvQualification"
            style="@style/TextViewTheme.Qualification"
            android:layout_below="@id/tvName"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:drawableStart="@drawable/ic_star_primary_dark_24dp"
            android:drawableLeft="@drawable/ic_star_primary_dark_24dp"
            android:text="@string/qualification" />

        <LinearLayout
            android:id="@+id/linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvQualification"
            android:orientation="horizontal">

            <TextView
                style="@style/TextViewTheme"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:padding="2dp"
                android:text="@string/time_services"
                android:textAlignment="center"
                android:textColor="@android:color/darker_gray" />

            <TextView
                style="@style/TextViewTheme"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:padding="2dp"
                android:text="@string/shipping_cost"
                android:textAlignment="center"
                android:textColor="@android:color/darker_gray" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_layout_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linear_layout"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvServiceTime"
                style="@style/TextViewTheme"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:padding="2dp"
                android:text="@string/time_services"
                android:textAlignment="center"
                android:textColor="@android:color/darker_gray" />

            <TextView
                android:id="@+id/tvShippingCost"
                style="@style/TextViewTheme"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:padding="2dp"
                android:text="@string/shipping_cost"
                android:textAlignment="center"
                android:textColor="@android:color/darker_gray" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/linear_layout_2"
            android:background="@android:color/black" />

    </RelativeLayout>

</RelativeLayout>